--- a/towndeli/order-history.html
+++ b/towndeli/order-history.html
@@ -121,6 +121,9 @@
     <div class="modal-dialog modal-md">
         <div class="modal-content">
             <div class="modal-header">
+                <span class="close-icon" data-dismiss="modal">
+                    <img src="dist/images/close-3-icon.png" alt="img">
+                </span>
                 <h4 class="modal-title"><strong>Review về đơn hàng:</strong> Cold-brewed coffe-Mã 123456</h4>
             </div>
             <div class="modal-body">
@@ -187,6 +190,9 @@
     <div class="modal-dialog modal-md">
         <div class="modal-content">
             <div class="modal-header">
+                <span class="close-icon" data-dismiss="modal">
+                    <img src="dist/images/close-3-icon.png" alt="img">
+                </span>
                 <h4 class="modal-title"><strong>Gởi mail đơn hàng:</strong> Cold-brewed coffe</h4>
             </div>
             <div class="modal-body">
@@ -204,6 +210,9 @@
     <div class="modal-dialog modal-md">
         <div class="modal-content">
             <div class="modal-header">
+                <span class="close-icon" data-dismiss="modal">
+                    <img src="dist/images/close-3-icon.png" alt="img">
+                </span>
                 <h4 class="modal-title"><strong>Đổi tên đơn hàng:</strong></h4>
             </div>
             <div class="modal-body">
@@ -220,6 +229,11 @@
 <div class="modal fade download-order-modal" tabindex="-1">
     <div class="modal-dialog modal-md">
         <div class="modal-content">
+            <div class="modal-header">
+                <span class="close-icon" data-dismiss="modal">
+                    <img src="dist/images/close-3-icon.png" alt="img">
+                </span>
+            </div>
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
