--- a/towndeli/product.html
+++ b/towndeli/product.html
@@ -1044,16 +1044,42 @@
                                             <div class="quickview-options">
                                                 <div class="clearfix">
                                                     <ul class="list-size">
-                                                        <li><a>12oz.</a></li>
-                                                        <li><a>16oz.</a></li>
-                                                        <li><a>22oz.</a></li>
+                                                        <li><a>STANDARD</a></li>
+                                                        <li><a>EXTRA</a></li>
+                                                        <li><a>EXTRA-BIG</a></li>
                                                     </ul>
                                                     <div class="wrap-quantity">
                                                         <label for="quickview-quantity-input">QUANTITY</label>
                                                         <input id="quickview-quantity-input" class="onlynumber" type="text" value="1" />
                                                     </div>
                                                 </div>
-                                                <div class="row mgt-20 mgb-10">
+                                                <div class="row mgt-15">
+                                                    <div class="col-md-12">
+                                                        <div class="add-topping-checkbox">
+                                                            <input type="checkbox" id="add-topping-checkbox" class="css-checkbox" />
+                                                            <label for="add-topping-checkbox" class="css-label">THÊM TOPPING</label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="row hidden add-topping-content mgt-15">
+                                                    <div class="col-xs-12">
+                                                        <p>Add topping content</p>
+                                                    </div>
+                                                </div>
+                                                <div class="row mgt-15">
+                                                    <div class="col-md-12">
+                                                        <div class="require-checkbox">
+                                                            <input type="checkbox" id="require-checkbox" class="css-checkbox" />
+                                                            <label for="require-checkbox" class="css-label">YÊU CẦU CHO MÓN</label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="row hidden require-content mgt-15">
+                                                    <div class="col-xs-12">
+                                                        <p>Require content</p>
+                                                    </div>
+                                                </div>
+                                                <!-- <div class="row mgt-20 mgb-10">
                                                     <div class="col-md-3 col-sm-6 col-xs-6">
                                                         <select class="custom-select no-search" style="width:100%">
                                                             <option value="1">TRAI CAY 1</option>
@@ -1101,7 +1127,7 @@
                                                     <li>COOKIES + STRAWBERRY</li>
                                                     <li>COOKIES</li>
                                                     <li>COOKIES</li>
-                                                </ul>
+                                                </ul> -->
                                             </div>
                                             <div class="text-right">
                                                 <span class="heart-icon"></span>
