--- a/towndeli/schedule.html
+++ b/towndeli/schedule.html
@@ -120,6 +120,11 @@
 <div class="modal fade edit-schedule-modal" tabindex="-1">
     <div class="modal-dialog modal-md">
         <div class="modal-content">
+            <div class="modal-header">
+                <span class="close-icon" data-dismiss="modal">
+                    <img src="dist/images/close-3-icon.png" alt="img">
+                </span>
+            </div>
             <div class="modal-body">
                 <div class="row mgb-15">
                     <h4 class="title">1.PICK A COFEE</h4>
@@ -196,6 +201,11 @@
 <div class="modal fade remove-schedule-modal" tabindex="-1">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
+            <div class="modal-header">
+                <span class="close-icon" data-dismiss="modal">
+                    <img src="dist/images/close-3-icon.png" alt="img">
+                </span>
+            </div>
             <div class="modal-body">
                 <div class="remove-icon">
                     <img src="dist/images/big-remove-icon.png" alt=""/>
