--- a/towndeli/product.html
+++ b/towndeli/product.html
@@ -1063,26 +1063,26 @@
                                                 </div>
                                                 <div class="row hidden add-topping-content mgt-15">
                                                     <div class="col-xs-12">
-                                                        <div id="addToppingTab"> 
+                                                        <div id="addToppingTabOnProduct" class="add-topping-tab"> 
                                                                 <ul  class="nav nav-pills">
                                                                     <li class="active">
-                                                                        <a  href="#option1" data-toggle="tab">TOPPING</a>
+                                                                        <a  href="#pro-option1" data-toggle="tab">TOPPING</a>
                                                                     </li>
                                                                     <li>
-                                                                        <a href="#option2" data-toggle="tab">THẠCH</a>
+                                                                        <a href="#pro-option2" data-toggle="tab">THẠCH</a>
                                                                     </li>
                                                                     <li>
-                                                                        <a href="#option3" data-toggle="tab">HƯƠNG</a>
+                                                                        <a href="#pro-option3" data-toggle="tab">HƯƠNG</a>
                                                                     </li>
                                                                     <li>
-                                                                        <a href="#option4" data-toggle="tab">FLAN</a>
+                                                                        <a href="#pro-option4" data-toggle="tab">FLAN</a>
                                                                     </li>
                                                                     <li>
-                                                                        <a href="#option5" data-toggle="tab">ĐẶC BIỆT</a>
+                                                                        <a href="#pro-option5" data-toggle="tab">ĐẶC BIỆT</a>
                                                                     </li>
                                                                 </ul>
                                                                 <div class="tab-content clearfix">
-                                                                    <div class="tab-pane active" id="option1">
+                                                                    <div class="tab-pane active" id="pro-option1">
                                                                         <div class="row">
                                                                             <div class="col-xs-12 col-sm-4">
                                                                                 <div class="topping-checkbox">
@@ -1164,7 +1164,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="tab-pane" id="option2">
+                                                                    <div class="tab-pane" id="pro-option2">
                                                                         <div class="row">
                                                                             <div class="col-xs-12 col-sm-4">
                                                                                 <div class="topping-checkbox">
@@ -1186,7 +1186,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="tab-pane" id="option3">
+                                                                    <div class="tab-pane" id="pro-option3">
                                                                         <div class="row">
                                                                             <div class="col-xs-12 col-sm-4">
                                                                                 <div class="topping-checkbox">
@@ -1208,7 +1208,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="tab-pane" id="option4">
+                                                                    <div class="tab-pane" id="pro-option4">
                                                                         <div class="row">
                                                                             <div class="col-xs-12 col-sm-4">
                                                                                 <div class="topping-checkbox">
@@ -1230,7 +1230,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="tab-pane" id="option5">
+                                                                    <div class="tab-pane" id="pro-option5">
                                                                         <div class="row">
                                                                             <div class="col-xs-12 col-sm-4">
                                                                                 <div class="topping-checkbox">
