--- a/towndeli/order-history.html
+++ b/towndeli/order-history.html
@@ -16,7 +16,7 @@
     <!--[if IE]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <![endif]-->
-    <title>TownDeli - Order History</title>
+    <title>TownDeli - My Orders</title>
     <meta name="keywords" content="keywords"/>
     <meta name="description" content="description"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
