--- a/towndeli/schedule.html
+++ b/towndeli/schedule.html
@@ -192,7 +192,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-update">Cập nhật</button>
+                <button type="button" class="btn btn-update">Xóa lịch này</button>
             </div>
         </div>
     </div>
