--- a/towndeli/order-history.html
+++ b/towndeli/order-history.html
@@ -735,7 +735,7 @@
                                                 <a class="reviewed" data-toggle="modal" data-target=".review-order-modal"></a>
                                                 <a class="btn2"></a>
                                                 <a class="btn3" data-toggle="modal" data-target=".send-order-email-modal"></a>
-                                                <a class="btn4"></a>
+                                                <a class="btn4" data-toggle="modal" data-target=".download-order-modal"></a>
                                             </td>
                                         </tr>
                                         <tr>
@@ -763,7 +763,7 @@
                                                 <a class="reviewed" data-toggle="modal" data-target=".review-order-modal"></a>
                                                 <a class="btn2"></a>
                                                 <a class="btn3" data-toggle="modal" data-target=".send-order-email-modal"></a>
-                                                <a class="btn4"></a>
+                                                <a class="btn4" data-toggle="modal" data-target=".download-order-modal"></a>
                                             </td>
                                         </tr>
                                         <tr>
@@ -791,7 +791,7 @@
                                                 <a class="reviewed" data-toggle="modal" data-target=".review-order-modal"></a>
                                                 <a class="btn2"></a>
                                                 <a class="btn3" data-toggle="modal" data-target=".send-order-email-modal"></a>
-                                                <a class="btn4"></a>
+                                                <a class="btn4" data-toggle="modal" data-target=".download-order-modal"></a>
                                             </td>
                                         </tr>
                                     </tbody>
