--- a/pccc/index.html
+++ b/pccc/index.html
@@ -32,6 +32,9 @@
 
 </head>
 <body>
+<!--     <div id="left-sticky">
+        <img src="dist/images/sticky1.png" alt="">
+    </div> -->
     <div class="container">
         <div class=" row top-banner">
             <embed src="dist/images/banner_pccc_0810.swf" play="true"/>
@@ -55,14 +58,14 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle uppercase" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Giới thiệu <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Giới Thiệu Chung</a></li>
+                                    <li><a href="intro.html">Giới Thiệu Chung</a></li>
                                     <li><a href="#">Sơ Đồ Tổ Chức</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle uppercase" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tin tức & sự kiện <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Hoạt Động Xây Dựng Lực Lượng</a></li>
+                                    <li><a href="news-and-events.html">Hoạt Động Xây Dựng Lực Lượng</a></li>
                                     <li><a href="#">Học Tập Theo Tấm Gương Đạo Đức Hồ Chí Minh</a></li>
                                     <li><a href="#">Tin Nội Bộ</a></li>
                                     <li><a href="#">Tin Thế Giới</a></li>
@@ -72,7 +75,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle uppercase" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Văn bản <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Quốc Hội</a></li>
+                                    <li><a href="documents.html">Quốc Hội</a></li>
                                     <li><a href="#">Chính phủ</a></li>
                                     <li><a href="#">Bộ Ngành</a></li>
                                     <li><a href="#">UBND Tỉnh </a></li>
@@ -559,6 +562,9 @@
             console.log('selected...');
             console.log(select_val);
         });
+
+        // ----------------
+        // $("#left-sticky").makeFixed();
     </script>
 </body>
 </html>
