--- a/pccc/index.html
+++ b/pccc/index.html
@@ -85,7 +85,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle uppercase" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Thủ tục hành chính <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Thủ Tục Hành Chính, Biểu Mẩu Về PCC</a></li>
+                                    <li><a href="administrative-proceeds.html">Thủ Tục Hành Chính, Biểu Mẩu Về PCC</a></li>
                                     <li><a href="#">Dịch Vụ Công</a></li>
                         
                                 </ul>
@@ -93,7 +93,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle uppercase" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tiêu chuẩn <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Tiêu Chuẩn</a></li>
+                                    <li><a href="standards.html">Tiêu Chuẩn</a></li>
                                     <li><a href="#">Quy Chuẩn</a></li>
                                     <li><a href="#">Tiêu Chuẩn Ngành</a></li>
                                 </ul>
