--- a/pccc/index.html
+++ b/pccc/index.html
@@ -478,7 +478,7 @@
                         <div class="panel-body box-content">
                             <span class="title">Số lượt truy cập</span>
                             <div class="count-viewer">
-                                <img src="dist/images/count-viewer.png" alt="">
+                                <img src="http://counter8.01counter.com/private/freecounterstat.php?c=e060e6ed166082f73fcedd182e426998" alt="">
                             </div>
                             <span class="number"><strong>291</strong> người đang online</span>
                         </div>
@@ -532,7 +532,8 @@
              width:1000,
              height:500, 
              space:5,
-             autoplay: true
+             autoplay: true,
+             fullwidth:true
         });
         slider.control('arrows');
 
